--- a/quiz/quiz03.html
+++ b/quiz/quiz03.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz03</title>
+    <title>퀴즈 03</title>
     <link rel="stylesheet" href="assets/css/quiz.css">
 </head>
 
@@ -29,26 +29,24 @@
     <main id="main">
         <div class="quiz__wrap">
             <div class="quiz">
-                <div class="quiz__header">
-                </div>
+                <div class="quiz__header"></div>
                 <div class="quiz__main">
-                    <div class="question">
-                    </div>
-                    <div class="chocies">
-                        <label for="choice1" class="choices">
-                            <input type="radio" id="choice1" name="chocie" value="1">
+                    <div class="question"></div>
+                    <div class="choices">
+                        <label for="choice1">
+                            <input type="radio" id="choice1" name="choice" value="1">
                             <span></span>
                         </label>
-                        <label for="choice2" class="choices">
-                            <input type="radio" id="choice2" name="chocie" value="2">
+                        <label for="choice2">
+                            <input type="radio" id="choice2" name="choice" value="2">
                             <span></span>
                         </label>
-                        <label for="choice3" class="choices">
-                            <input type="radio" id="choice3" name="chocie" value="3">
+                        <label for="choice3">
+                            <input type="radio" id="choice3" name="choice" value="3">
                             <span></span>
                         </label>
-                        <label for="choice4" class="choices">
-                            <input type="radio" id="choice4" name="chocie" value="4">
+                        <label for="choice4">
+                            <input type="radio" id="choice4" name="choice" value="4">
                             <span></span>
                         </label>
                     </div>
@@ -59,15 +57,15 @@
                     <button class="confirm">정답 확인하기</button>
                 </div>
             </div>
-
         </div>
     </main>
     <!-- //main -->
 
     <footer id="footer">
-        <a href="an83690880@gmail.com">an83690880@gmail.com</a>
+        <a href="mailto:webstoyboy@naver.com">webstoyboy@naver.com</a>
     </footer>
     <!-- //footer -->
+
     <script>
         // 선택자
         const quizWrap = document.querySelector(".quiz__wrap");
@@ -95,41 +93,40 @@
         quizQuestion.innerHTML = quizInfo.num + ". " + quizInfo.question;
         quizAnswer.innerHTML = quizInfo.answer;
         quizDesc.innerHTML = quizInfo.desc;
-        // console.log(quizChoices[0])
 
-        // quizChoices[0].innerHTML = quizInfo.choices[0]
-        // quizChoices[1].innerHTML = quizInfo.choices[1]
-        // quizChoices[2].innerHTML = quizInfo.choices[2]
-        // quizChoices[3].innerHTML = quizInfo.choices[3]
+        // quizChoices[0].innerHTML = quizInfo.choices[0];
+        // quizChoices[1].innerHTML = quizInfo.choices[1];
+        // quizChoices[2].innerHTML = quizInfo.choices[2];
+        // quizChoices[3].innerHTML = quizInfo.choices[3];
 
         for (let i = 0; i < quizChoices.length; i++) {
-            quizChoices[i].innerHTML = quizInfo.choices[i]
+            quizChoices[i].innerHTML = quizInfo.choices[i];
         }
 
-        // 보기 선택
+        // 정답확인
         quizConfirm.addEventListener("click", () => {
-            let seletedChoice = null;
+            let selectedChoice = null;
 
+            // 보기 선택
             for (let i = 0; i < quizSelects.length; i++) {
                 if (quizSelects[i].checked) {
-
-                    seletedChoice = quizSelects[i].value;
+                    selectedChoice = quizSelects[i].value;
                     break;
                 }
             }
 
             // 정답 확인
-            if (seletedChoice !== null) {
-                if (seletedChoice == quizInfo.answer) {
+            if (selectedChoice !== null) {
+                if (selectedChoice == quizInfo.answer) {
                     alert("정답입니다.");
                     quizDesc.classList.remove("none");
                 } else {
-                    alert("오답입니다.")
+                    alert("오답입니다.");
                     quizAnswer.classList.remove("none");
                     quizDesc.classList.remove("none");
                 }
             } else {
-                alert("보기를 선택해주세요!!");
+                alert("보기를 선택해주세요!! 🧐");
             }
         });
 
