--- a/quiz/quiz05.html
+++ b/quiz/quiz05.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz05</title>
+    <title>퀴즈 05</title>
     <link rel="stylesheet" href="assets/css/quiz.css">
 </head>
 
@@ -32,12 +32,12 @@
     <!-- //main -->
 
     <footer id="footer">
-        <a href="an83690880@gmail.com">an83690880@gmail.com</a>
+        <a href="mailto:webstoyboy@naver.com">webstoyboy@naver.com</a>
     </footer>
     <!-- //footer -->
 
     <script>
-        // 선택자
+        // 선택자 
         const quizWrap = document.querySelector(".quiz__wrap");
 
         // 문제 정보
@@ -49,45 +49,40 @@
                 choices: ["발진", "정류", "증폭", "복조"],
                 answer: "4",
                 desc: "피변조파는 변조된 신호를 의미합니다. 변조된 신호를 원래의 신호로 만드는 것을 복조라고 합니다."
-            },
-            {
+            }, {
                 date: "2017년 상시",
                 type: "정보처리기능사",
-                question: "EBCDIC 코드는 몇 개의 Zone Bit를 갖는가?",
-                choices: ["1", "3", "2", "4"],
+                question: "변,복조기의 역할과 거리가 먼 것은?",
+                choices: [
+                    "통신 신호의 변환기라고 볼 수 있다.",
+                    "디지털 신호를 아날로그 신호로 변환한다.",
+                    "공중 전화 통신망에 적합한 통신 신호로 변환한다.",
+                    "컴퓨터 신호를 광 케이블에 적합한 광 신호로 변환한다."
+                ],
                 answer: "4",
-                desc: "EBCDIC 코드는 총 8비트 코드 입니다..존비트 구하는 공식은 존비트 = 전체 비트수 - 4(디지트비트) 입니다. 모든 코드는 존비트 + 디지트비트로 구성됩니다. 모든 코드의 디지트 비트가 4 이므로 위의 공식이 성립합니다."
-            },
-
-            {
+                desc: "모뎀의 역할은 디지털 데이터를 아날로그 신호로 변조하고, 아날로그 신호를 디지털 데이터로 복조하는 역할을 한다."
+            }, {
                 date: "2017년 상시",
                 type: "정보처리기능사",
-                question: "컴퓨터에 의하여 다음에 실행될 명령어의 주소가 저장되어 있는 기억 장소는?",
-                choices: ["메모리 레지스터(Memory Register)", "명령어 레지스터(Instruction Register)", "인덱스 레지스터(Index Register)", "프로그램 카운터(Program Counter)"],
-                answer: "4",
-                desc: "프로그램 카운터는 컴퓨터에의하여 다음에 실행될 명령어의 주소가 저장되어있는 기억장소입니다."
-            },
-
-            {
-                date: "2017년 상시",
-                type: "정보처리기능사",
-                question: "CPU 에서 명령이 실행되는 순서를 제어하거나 특정 프로그램에 관련된 컴퓨터 시스템의 상태를 나타내고 유지하기 위한 제어 워드로서, 실행중인 CPU의 상황을 나타내는 것은?",
-                choices: ["MBR", "MAR", "PC", "PSW"],
-                answer: "4",
-                desc: "CPU 에서 명령이 실행되는 순서를 제어하거나 특정 프로그램에 관련된 컴퓨터 시스템의 상태를 나타내고 유지하기 위한 제어 워드로서, 실행중인 CPU의 상황을 나타내는 것은 PSW입니다."
-            },
-
-            {
-                date: "2017년 상시",
-                type: "정보처리기능사",
-                question: "피변조파로부터 원래의 신호파를 만드는 것을 무엇이라고 하는가?",
-                choices: ["발진", "정류", "증폭", "복조"],
+                question: "인터넷 도메인 네임을 IP Address로 바꿔주는 시스템을 무엇이라 하는가?",
+                choices: ["HTTP", "TCP/IP", "URL", "DNS"],
                 answer: "4",
                 desc: "피변조파는 변조된 신호를 의미합니다. 변조된 신호를 원래의 신호로 만드는 것을 복조라고 합니다."
-            },
-
-
-
+            }, {
+                date: "2017년 상시",
+                type: "정보처리기능사",
+                question: "기억장치에 액세스(Access)할 필요 없이 스택(Stack)을 이용하여 연산을 행하는 명령어 형식은?",
+                choices: ["1-주소 명령어", "2-주소 명령어", "3-주소 명령어", "0 - 주소 명령어"],
+                answer: "4",
+                desc: "스택은 0 주소입니다."
+            }, {
+                date: "2017년 상시",
+                type: "정보처리기능사",
+                question: "생성된 테이블을 삭제할 때 사용하는 SQL 명령문은?",
+                choices: ["CLEAR", "KILL", "DELETE", "DROP"],
+                answer: "4",
+                desc: "DELETE는 레코드(튜플) 삭제 명령어이며, DROP은 데이터베이스, 테이블, 뷰 삭제 명령어입니다."
+            }
         ]
 
         // 변수
@@ -176,3 +171,6 @@
         });
 
     </script>
+</body>
+
+</html>
